JiffleNowDev/src/objects/MappingObject__c.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Mapping UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Mapping Object</label>
    <nameField>
        <label>Object Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>